<?xml version="1.0"?>

<!--
  Copyright (c) 2018, 2019 IBM Corp. and others

  This program and the accompanying materials are made available under
  the terms of the Eclipse Public License 2.0 which accompanies this
  distribution and is available at https://www.eclipse.org/legal/epl-2.0/
  or the Apache License, Version 2.0 which accompanies this distribution and
  is available at https://www.apache.org/licenses/LICENSE-2.0.

  This Source Code may also be made available under the following
  Secondary Licenses when the conditions for such availability set
  forth in the Eclipse Public License, v. 2.0 are satisfied: GNU
  General Public License, version 2 with the GNU Classpath
  Exception [1] and GNU General Public License, version 2 with the
  OpenJDK Assembly Exception [2].

  [1] https://www.gnu.org/software/classpath/license.html
  [2] http://openjdk.java.net/legal/assembly-exception.html

  SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-exception-2.0 OR LicenseRef-GPL-2.0 WITH Assembly-exception
-->

<project name="Java11AndUp" default="build" basedir=".">
	<taskdef resource='net/sf/antcontrib/antlib.xml'/>
	<description>
		Tests for Java 11 and up
	</description>
	<import file="${TEST_ROOT}/functional/build.xml"/>

	<!-- set global properties for this build -->
	<property name="DEST" value="${BUILD_ROOT}/functional/Java11andUp" />
		
	<!--Properties for this particular build-->
	<property name="src" location="./src"/>
	<property name="build" location="./bin"/>
	<property name="transformerListener" location="${TEST_ROOT}/Utils/src"/>

	<target name="init">
		<mkdir dir="${DEST}" />
		<mkdir dir="${build}"/>
	</target>

	<target name="compile_generator" depends="init" description="Compile CondyGenerator">
		<echo>Compiling CondyTest helpers</echo>
		<echo>Ant version is ${ant.version}"</echo>
		<property name="compiler.javac" value="${TEST_JDK_HOME}/bin/javac" />
		<echo>============COMPILER SETTINGS============</echo>
		<echo>===fork:                         yes</echo>
		<echo>===executable:                   ${compiler.javac}</echo>
		<echo>===debug:                        on</echo>
		<echo>===destdir:                      ${DEST}</echo>
		<javac srcdir="${src}" destdir="${build}" debug="true" fork="true" executable="${compiler.javac}" includeAntRuntime="false" encoding="ISO-8859-1">
			<src path="${src}"/>
			<include name="**/condy/BootstrapMethods.java" />
			<include name="**/condy/CondyGenerator.java" />
			<classpath>
				<pathelement location="${TEST_ROOT}/TestConfig/lib/asm-7.0.jar" />
			</classpath>
		</javac>
	</target>

	<target name="generate_condy" depends="compile_generator" description="Run Condugenerator to generate bytecode" >
		<property name="javaexecutable.java" value="${TEST_JDK_HOME}/bin/java" />
		<echo>Running CondyGenerator</echo>
		<java classname="org.openj9.test.condy.CondyGenerator" fork="true" failonerror="true" logError="true" jvm="${javaexecutable.java}">
			<jvmarg value="-Xverify:none" />
			<classpath>
				<pathelement location="${TEST_ROOT}/TestConfig/lib/asm-7.0.jar" />
				<pathelement location="${build}" />
			</classpath>
		</java>
		<copy file="PrimitiveCondyMethods.class" todir="${build}/org/openj9/test/condy" overwrite="true" />
		<delete failonerror="true" verbose="true">
			<fileset dir=".">
				<include name="PrimitiveCondyMethods.class"/>
			</fileset>
		</delete>
	</target>
	
	<target name="compile" depends="generate_condy" description="Using java ${JDK_VERSION} to compile the source" >
		<echo>Ant version is ${ant.version}</echo>
		<echo>============COMPILER SETTINGS============</echo>
		<echo>===fork:                         yes</echo>
		<echo>===executable:                   ${compiler.javac}</echo>
		<echo>===debug:                        on</echo>
		<echo>===destdir:                      ${DEST}</echo>

		<javac srcdir="${src}" destdir="${build}" debug="true" fork="true" executable="${compiler.javac}" includeAntRuntime="false" encoding="ISO-8859-1">
			<src path="${src}"/>
			<src path="${transformerListener}" />
			<compilerarg line="--add-exports java.base/jdk.internal.reflect=ALL-UNNAMED --add-exports java.base/com.ibm.tools.attach.target=ALL-UNNAMED" />
			<classpath>
				<pathelement location="${TEST_ROOT}/TestConfig/lib/testng.jar"/>
				<pathelement location="${TEST_ROOT}/TestConfig/lib/jcommander.jar"/>
				<pathelement location="${TEST_ROOT}/TestConfig/lib/asm-7.0.jar" />
				<pathelement location="${build}" />
			</classpath>
		</javac>
	</target>

	<target name="dist" depends="compile,dist_functional" description="generate the distribution" >
		<mkdir dir="${DEST}"/>
		<jar jarfile="${DEST}/GeneralTest.jar" filesonly="true">
			<fileset dir="${build}"/>
			<fileset dir="${src}/../" includes="*.properties,*.xml"/>
		</jar>
		<copy todir="${DEST}">
			<fileset dir="${src}/../" includes="*.xml" />
			<fileset dir="${src}/../" includes="*.mk" />
		</copy>
	</target>
	
	<target name="build" >
		<if>
			<not>
				<matches string="${JDK_VERSION}" pattern="^(8|9|10)$$" />
			</not>
			<then>
				<antcall target="clean" inheritall="true" />
			</then>
		</if>
	</target>

	<target name="clean" depends="dist" description="clean up" >
		<delete dir="${build}"/>
	</target>
</project>
